# bevy_sandbox

./: Cargo.toml  comandos.txt
crates/wasm-server-runner-1.0.0/: .cargo_vcs_info.json  Cargo.toml
crates/wasm-server-runner-1.0.0/static/: index.html
src/: breakout.rs  lib.rs
src/asteroids/: asteroids.rs  bundles.rs  components.rs  constants.rs  events.rs  resources.rs  systems.rs
src/asteroids/components/: ball.rs  bullet.rs  collider.rs  entity_tags.rs  movement.rs  player.rs  relationships.rs  score_board_ui.rs  shape.rs  timers.rs
src/asteroids/components/ball/: ball_cooldown.rs
src/asteroids/components/entity_tags/: ball.rs
src/asteroids/components/movement/: acceleration.rs  is_braking.rs  velocity.rs
src/asteroids/components/player/: bullet_cooldown.rs  player.rs  score.rs
src/asteroids/components/timers/: bullet_cooldown.rs  laser_cooldown.rs  laser_life_cooldown.rs
