[package]
name = "bevy_sandbox"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[dependencies.bevy]
version = "0.16.1"
features = ["dynamic_linking", "wayland"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "breakout"
path = "src/lib.rs"
doc-scrape-examples = true

[package.metadata.example.breakout]
name = "Breakout"
description = "An implementation of the classic game \"Breakout\"."
category = "Games"
wasm = true
