[package]
name = "bevy_sandbox"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
bevy_rapier2d = { version = "0.30.0", features = [] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "breakout"
path = "src/breakout.rs"
doc-scrape-examples = true

[package.metadata.example.breakout]
name = "Breakout"
description = "An implementation of the classic game \"Breakout\"."
category = "Games"
wasm = true

[[example]]
name = "asteroids"
path = "src/asteroids/asteroids.rs"
doc-scrape-examples = true

[package.metadata.example.asteroids]
name = "Asteroids"
description = "An implementation of the classic game \"Asteroids\"."
category = "Games"
wasm = true
